--- a/sem3front_end/src/index.css
+++ b/sem3front_end/src/index.css
@@ -1,5 +1,19 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.input {
+    line-height: 2;
+    font-size: 18px;
+    height: auto;
+    padding-left: 20px;
+    margin-bottom: 10px;
+  }
+.line {
+    display: inline;
+}
+.theLine {
+    display: inherit;  
+}
+.add {
+    line-height: 2;
+    font-size: 16px;     
+    margin-left: 20px;
+    margin-bottom: 10px;
 }
