--- a/sem3front_end/src/index.css
+++ b/sem3front_end/src/index.css
@@ -20,5 +20,33 @@
 .register { 
     text-align: center;   
     margin-top: 10px; 
+}
+.caption {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.custom-container {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+}
+.sub-container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+.nearby-places-container {
+    display: flex !important;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+.row {
+    width: 100%;
+}
+.page-header {
 
+    margin: 0 0 20px;
 }
